# Corsac

./: CMakeLists.txt  README.md  app.rc  main.cpp  mainwindow.cpp  mainwindow.h
aboba/console/: CommandInput.cpp  CommandInput.h  CommandSuggestion.cpp  CommandSuggestion.h  Console.cpp  Console.h  ConsoleDisplay.cpp  ConsoleDisplay.h  ConsoleLog.cpp  ConsoleLog.h
aboba/sidebar/: SidebarAnimator.cpp  SidebarAnimator.h  SidebarButtons.cpp  SidebarButtons.h
aboba/tabs/: AboutTab.cpp  AboutTab.h  BaseTab.cpp  BaseTab.h  SettingsTab.cpp  SettingsTab.h
aboba/tabs/SettingsHelper/: SettingsIconButton.cpp  SettingsIconButton.h  SettingsSearchPanel.cpp  SettingsSearchPanel.h  SettingsSectionWidget.cpp  SettingsSectionWidget.h  ToggleSwitch.cpp  ToggleSwitch.h
